--- a/Sprint 2/front_end_sprint_2/shop-online/src/app/header/header.component.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/app/header/header.component.html
@@ -10,13 +10,26 @@
             <p>Free shipping, 30-day return or refund guarantee.</p>
           </div>
         </div>
-        <div class="col-lg-6 col-md-5">
+
+        <div class="col-lg-6 col-md-5" >
           <div class="header__top__right">
-            <div class="header__top__links">
+            <div class="header__top__links" >
               <a routerLink="/login">Sign in</a>
             </div>
           </div>
         </div>
+
+<!--        <li class="nav-item dropdown" *ngIf="token !== ''">-->
+<!--          <button class="btn btn-light nav-link d-flex align-items-center nav-link dropdown-toggle" id="navbarDropdown" role="button" style="height: 100%;border: solid 1px; border-radius: 10px">-->
+<!--            {{username}}-->
+<!--          </button>-->
+<!--          <ul id="dropdown-menu" class="dropdown-menu dropdown-menu-end" style="background-color: #f8f9fa; right: 0 !important;">-->
+<!--            <li><a class="dropdown-item" style="font-size: 100%; color: #707071">Chi tiết tài khoản</a></li>-->
+<!--            <li><button class="dropdown-item" style="font-size: 100%; color: #707071" (click)="onLogout()">Đăng xuất</button></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+
+
       </div>
     </div>
   </div>
