--- a/Sprint 2/front_end_sprint_2/shop-online/src/app/login/login/login.component.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/app/login/login/login.component.html
@@ -10,7 +10,7 @@
   <div class="noi-dung">
     <div class="form">
       <h2 style="text-align: center">Đăng Nhập</h2>
-      <form action="">
+      <form [formGroup]="loginForm" (ngSubmit)="login()">
         <div class="input-form">
           <span>Tên Người Dùng</span>
           <input type="text" name="">
@@ -23,7 +23,8 @@
           <label><input type="checkbox" name=""> Nhớ Đăng Nhập</label>
         </div>
         <div class="input-form">
-          <input type="submit" value="Đăng Nhập">
+          <button class="btn btn-lg w-100 fs-6 btn-yellow" type="submit">Đăng nhập</button>
+
         </div>
         <div class="input-form">
           <p>Bạn Chưa Có Tài Khoản? <a href="#">Đăng Ký</a></p>
