--- a/Sprint 2/front_end_sprint_2/shop-online/src/app/card/card.component.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/app/card/card.component.html
@@ -124,7 +124,7 @@
 
         <form class="mb-30" action="">
           <div class="input-group">
-            <input type="text" class="form-control p-4" placeholder="Mã giảm giá">
+            <input type="text" class="form-control p-4" placeholder="">
             <div class="input-group-append">
               <button class="btn btn-dark font-weight-bold">Apply discount code</button>
             </div>
