--- a/Sprint 2/front_end_sprint_2/shop-online/src/app/footer/footer.component.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/app/footer/footer.component.html
@@ -38,10 +38,10 @@
           <h6>NewLetter</h6>
           <div class="footer__newslatter">
             <p>Be the first to know about new arrivals, look books, sales & promos!</p>
-            <form action="#">
+            <div>
               <input type="text" placeholder="Your email">
               <button type="submit"><span class="icon_mail_alt"></span></button>
-            </form>
+            </div>
           </div>
         </div>
       </div>
