--- a/Sprint 2/front_end_sprint_2/shop-online/src/app/login/login/login.component.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/app/login/login/login.component.html
@@ -7,30 +7,45 @@
   </div>
   <!--Kết Thúc Phần Hình Ảnh-->
   <!--Bắt Đầu Phần Nội Dung-->
-  <div class="noi-dung">
-    <div class="form">
-      <h2 style="text-align: center">Đăng Nhập</h2>
-      <form [formGroup]="loginForm" (ngSubmit)="login()">
-        <div class="input-form">
-          <span>Tên Người Dùng</span>
-          <input type="text" name="">
-        </div>
-        <div class="input-form">
-          <span>Mật Khẩu</span>
-          <input type="password" name="">
-        </div>
-        <div class="nho-dang-nhap">
-          <label><input type="checkbox" name=""> Nhớ Đăng Nhập</label>
-        </div>
-        <div class="input-form">
-          <button class="btn btn-lg w-100 fs-6 btn-yellow" type="submit">Đăng nhập</button>
 
-        </div>
-        <div class="input-form">
-          <p>Bạn Chưa Có Tài Khoản? <a href="#">Đăng Ký</a></p>
-        </div>
-      </form>
-      <h3>Đăng Nhập Bằng Mạng Xã Hội</h3>
+  <div class="noi-dung">
+
+    <div class="form">
+      <div class="row">
+
+
+        <form [formGroup]="loginForm" (ngSubmit)="onLogin()"*ngIf="loginForm">
+          <div class="mb-4 text-center m-auto">
+            <h2>Log in</h2>
+          </div>
+          <div class="input-form">
+            <span style="text-align: center">User name</span>
+            <input type="text" name="" formControlName="username">
+          </div>
+          <div class="input-form">
+            <span >Password</span>
+            <input type="password" name="" formControlName="password">
+          </div>
+          <div class="nho-dang-nhap">
+            <label><input type="checkbox" name=""> Remember Sign In</label>
+          </div>
+
+          <div class="input-form">
+            <button class="btn btn-info w-100 fs-6 " type="submit">
+              Log in
+            </button>
+          </div>
+          <div class="input-form">
+            <p>
+              Do not have an account? <a href="#">
+              Register</a></p>
+          </div>
+        </form>
+      </div>
+
+
+      <h3>
+        Sign in with another way</h3>
       <ul class="icon-dang-nhap">
         <li><i class="fa fa-facebook" aria-hidden="true"></i></li>
         <li><i class="fa fa-google" aria-hidden="true"></i></li>
