--- a/Sprint 2/front_end_sprint_2/shop-online/src/app/loading/loading.component.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/app/loading/loading.component.html
@@ -1,1 +1,17 @@
-<div id="loadding"></div>
+<!--<div id="loading" >-->
+<!--  <img src="assets/img/loadding/loaddingggg.gif">-->
+<!--</div>-->
+<div class="container-fluid vh-100">
+  <div class="cssload-preloader" style="background-color: black">
+    <div class="cssload-preloader-box">
+
+      <div>L</div>
+      <div>o</div>
+      <div>a</div>
+      <div>d</div>
+      <div>i</div>
+      <div>n</div>
+      <div>g</div>
+    </div>
+  </div>
+</div>
