--- a/Sprint 2/front_end_sprint_2/shop-online/src/app/detail/detail.component.html
+++ b/Sprint 2/front_end_sprint_2/shop-online/src/app/detail/detail.component.html
@@ -49,23 +49,10 @@
           <small class="pt-1">(99 Reviews)</small>
         </div>
         <h3 class="font-weight-semi-bold mb-4">${{product.price}}</h3>
-        <p class="mb-4">{{product.specification}}</p>
+        <p class="mb-4"  [innerHTML]="product.specification"></p>
 
 
         <div class="d-flex align-items-center mb-4 pt-2">
-          <div class="input-group quantity mr-3" style="width: 130px;">
-            <div class="input-group-btn">
-              <button class="btn btn-primary btn-minus">
-                <i class="fa fa-minus"></i>
-              </button>
-            </div>
-            <input type="text" class="form-control bg-secondary border-0 text-center" value="1">
-            <div class="input-group-btn">
-              <button class="btn btn-primary btn-plus">
-                <i class="fa fa-plus"></i>
-              </button>
-            </div>
-          </div>
 
           <button class="btn btn-primary px-3"  *ngIf="role === 'ROLE_USER'" [routerLink]="" (click)="addToCart(product)">
             <i class="fa fa-shopping-cart mr-1">
@@ -104,9 +91,7 @@
         <div class="tab-content">
           <div class="tab-pane fade show active" id="tab-pane-1">
             <h4 class="mb-3">Product Description</h4>
-            <p>
-              {{product.productDescription}}
-            </p>
+            <div [innerHTML]="product.productDescription" ></div>
           </div>
 
           <div class="tab-pane fade" id="tab-pane-3">
@@ -174,33 +159,51 @@
 <div class="container">
   <div class="text-center mb-4">
     <h2 class="section-title px-5"><span class="px-2">
-Products under 500 usd</span></h2>
+ New Products </span></h2>
   </div>
   <div class="row">
 
-    <div  class="col-lg-4 col-md-6 col-sm-6 pb-1" *ngFor="let element of productList; index as i">
 
-        <div class="card product-item border-0 mb-4">
-          <div class="card-header product-img position-relative overflow-hidden bg-transparent border p-0">
-            <img class="img-fluid w-100" src="{{element.image}}" alt="">
-          </div>
-          <div class="card-body border-left border-right text-center p-0 pt-4 pb-3">
-            <h6 class="text-truncate mb-3">{{element.name}}</h6>
-            <div class="d-flex justify-content-center">
-              <h6>${{element.price}}</h6>
-              <!--            <h6 class="text-muted ml-2">-->
-              <!--              <del>30.990.000đ</del>-->
-              <!--            </h6>-->
+
+
+        <div class="col-lg-4 col-md-6 col-sm-6 pb-1" *ngFor="let element of productList; index as i">
+          <div class="product-item bg-light mb-4">
+            <div class="product-img position-relative overflow-hidden">
+              <img class="img-fluid w-100"  src="{{element.image}}"  [routerLink]="['/detail',element.id]" alt="">
+              <div class="product-action" >
+                <!--                    <a class="btn btn-outline-dark btn-square" href="">-->
+                <!--                      <i class="fa fa-shopping-cart"></i>-->
+                <!--                    </a>-->
+                <a *ngIf="role === 'ROLE_USER'" [routerLink]="" (click)="addToCart(element)" class="btn btn-outline-dark btn-square">
+                  <i class="fa fa-shopping-cart"></i>
+                </a>
+                <a class="btn btn-outline-dark btn-square" [routerLink]="['/detail',element.id]"><i class="fa fa-search"></i></a>
+              </div>
             </div>
-          </div>
-          <div class="card-footer d-flex justify-content-between bg-light border">
-            <a href="" class="btn btn-sm text-dark p-0" [routerLink]="['/detail',element.id]"><i class="fas fa-eye text-primary mr-1"></i>Detail</a>
-            <a href="" class="btn btn-sm text-dark p-0" *ngIf="role === 'ROLE_USER'" [routerLink]="" (click)="addToCart(element)"><i class="fas fa-shopping-cart text-primary mr-1"></i>Add To Cart</a>
+            <div class="text-center py-4">
+              <a class="h6 text-decoration-none text-truncate" [routerLink]="['/detail',element.id]">{{element.name}}</a>
+              <div class="d-flex align-items-center justify-content-center mt-2">
+                <h5>$ {{element.price}}</h5><h6 class="text-muted ml-2"><del>{{element.price}}</del></h6>
+              </div>
+
+              <div class="d-flex align-items-center justify-content-center mb-1">
+                <div class="row">
+
+                  <span *ngIf="role=== 'ROLE_ADMIN'"class="row-cols-sm-4" style="color: green" [routerLink]="['/product-edit']"><i class="fa-solid fa-pen-to-square"></i></span>
+                  <span *ngIf="role === 'ROLE_ADMIN'"class="row-cols-sm-4"style="color: darkred"[routerLink]="['/product-delete']"><i class="fa-solid fa-trash-can"></i></span>
+
+                </div>
+                <!--                    <button class="btn btn-sm btn-primary btn-plus">-->
+                <!--                      <i class="fa fa-plus"></i>-->
+                <!--                    </button>-->
+
+              </div>
+            </div>
+
           </div>
         </div>
-      </div>
 
+      </div>
     </div>
-  </div>
 
 <!-- Products End -->
